--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@vercel/kv": "^1.0.1",
+    "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
     "date-fns": "^3.3.0",
@@ -18,11 +19,14 @@
     "kysely": "^0.27.2",
     "lodash": "^4.17.21",
     "next": "^14.1.0",
+    "next-auth": "^5.0.0-beta.5",
     "pg": "^8.11.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/lodash": "^4.14.202",
     "@types/node": "^20",
     "@types/pg": "^8.10.9",
