--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "migrate": "tsx ./db/migrator.ts"
+    "migrate": "tsx ./db/migrator.ts",
+    "electron": "electron main.js"
   },
   "dependencies": {
     "@vercel/kv": "^1.0.1",
@@ -16,10 +17,11 @@
     "bootstrap-icons": "^1.11.3",
     "date-fns": "^3.3.0",
     "dotenv": "^16.3.1",
+    "jose": "^5.2.0",
+    "jsonwebtoken": "^9.0.2",
     "kysely": "^0.27.2",
     "lodash": "^4.17.21",
     "next": "^14.1.0",
-    "next-auth": "^5.0.0-beta.5",
     "pg": "^8.11.3",
     "react": "^18",
     "react-dom": "^18",
@@ -27,6 +29,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/lodash": "^4.14.202",
     "@types/node": "^20",
     "@types/pg": "^8.10.9",
